--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="script.js">
+    <link rel="stylesheet" href="media_query.css">
+    
   </head>
   <body>
     <div class="top-nav">
@@ -22,10 +23,9 @@
 
         <nav>
           <ul>
-            <li><a href="#">Головна</a></li>
-            <li><a href="#">Про нас</a></li>
-            <li><a href="#">Меню</a></li>
-            <li><a href="#">Контакти</a></li>
+            <li><a href="index.html">Головна</a></li>
+            <li><a href="https://www.instagram.com/cafe.knutd/">Про нас</a></li>
+            <li><a href="https://knutd.edu.ua/students/studcafe/">Контакти</a></li>
           </ul>
         </nav>
 
